fixed problem in xml trees

--- a/document.tex
+++ b/document.tex
@@ -1,6 +1,6 @@
 
 \documentclass[numbers=noenddot, abstract=on, a4paper, headsepline,
-footsepline, oneside, draft=off, listof=leveldown]{scrreprt}
+footsepline, oneside, openright, draft=off, listof=leveldown]{scrreprt}
 
 % Setting heading fonts to serif
 \addtokomafont{disposition}{\rmfamily}
