--- a/document.tex
+++ b/document.tex
@@ -143,7 +143,7 @@ use this e-voting system.
 
 I hereby declare having done this master's thesis myself without any
 unauthorized help. All information sources that strongly helped me in my work,
-are fully referenced in this document t or directly in the source code.
+are fully referenced in this document or directly in the source code.
 
 \begin{flushleft}
 
@@ -297,9 +297,9 @@ missing:
   \Vref{sec:zeroknowledgeproofs}.
   \item \textbf{Threshold Cryptosystem:} In order to ensure privacy of
   the ballots, the CGS97 e-voting scheme uses a so called threshold system. This
-  system allows to split a secret key and distribute \emph{key shares} to a
+  system allows to split a private key and distribute \emph{key shares} to a
   given set of participants. In order to decrypt a cipher text, the parties have
-  to collaborate in order to reconstruct the secret key. Threshold cryptosystems
+  to collaborate in order to reconstruct the private key. Threshold cryptosystems
   are discussed in further detail in \Vref{sec:secretsharing}.
 \end{itemize}
 
@@ -399,7 +399,7 @@ The voting scheme that will be used in our system is assembled from some well
 known cryptographic building blocks which are briefly explained in this section.
 All these cryptographic building blocks belong to the area of \emph{asymmetric}
 cryptography, which is usually based on a key pair, containing a
-\emph{public key} and a \emph{secret key}.
+\emph{public key} and a \emph{private key}.
 
 \subsection{Discrete Logarithm Problem}
 \label{sec:discretelogarithm}
@@ -431,7 +431,7 @@ Cryptography by A. Menezes et. al.
 The ElGamal cryptosystem \cite{EG84}, proposed by T. El Gamal in 1984, is the
 asymmetric cryptosystem which is mostly used in the context of e-voting. An
 asymmetric cryptosystem uses two keys to operate, one which is used to encrypt a
-certain message (the public key) and another to decrypt the message (the secret
+certain message (the public key) and another to decrypt the message (the private
 key). The security of this cryptosystem is based on the fact that it is hard to
 compute the logarithm in discrete modular groups and hence making the
 exponentiation in modular groups a one way function. A major advantage of the
@@ -451,7 +451,7 @@ modular group $\mathbb{Z}^*_p$. $\mathbb{Z}_q$ is an additive modular group of o
 last parameter needed is an arbitrarily chosen generator $g$ of the group $G_q$.
 Further information concerning group theory can be found in Chapter 2 of the
 Handbook of Applied Cryptography by Alfred Menezes et. al. \cite{book:hac}. We
-can now derive the asymmetric key pair containing the secret key $x \in_R
+can now derive the asymmetric key pair containing the private key $x \in_R
 \mathbb{Z}_q$ and the public key $y=g^x \in G_q$. A message $m \in G_q$ can be
 encrypted by first choosing a random value $r \in_R \mathbb{Z}_q$, and then
 applying the following function:
@@ -459,7 +459,7 @@ applying the following function:
 Enc_y : G_q \times \mathbb{Z}_q \rightarrow G_q \times G_q,
 (a, b)=Enc_y(m, r)=(g^r, y^r \cdot m) \notag
 \end{equation}
-The tuple $(a, b)$ is the cipher text of the message $m$. $m$ can be recovered using the secret key $x$
+The tuple $(a, b)$ is the cipher text of the message $m$. $m$ can be recovered using the private key $x$
 by applying the decryption function:
 \begin{equation}
 Dec_x : G_q \times G_q \rightarrow G_q,
@@ -547,7 +547,7 @@ is not a big problem.
 \label{sec:secretsharing}
 In e-voting scenarios it is crucial that not a
 single entity can manipulate the result or reveal single votes. This
-responsibility, or in our case the secret key which is needed to obtain the
+responsibility, or in our case the private key which is needed to obtain the
 final result, has to be spread across a set of so called trustees. In the CGS97
 scheme, this property is achieved by using a secret sharing mechanism as
 proposed by A. Shamir in 1979 \cite{Shamir79}. This scheme even allows to define a so called
@@ -580,10 +580,10 @@ secret can only be reproduced if at least $t$ trustees are collaborating and
 contribute their shares.
 
 The approach of Shamir is quite simple, but has one major drawback though: It
-requires a trusted dealer which has the knowledge of the shared key. It it
-would be nice to have a scheme where the group of trustees collaborate to create
-the shares in a way that nobody can derive the secret key unless a sufficient
-amount of trustees collaborate. In 1991, T. P. Pedersen proposed a scheme
+requires a trusted dealer which has the knowledge of the secret. It
+it would be nice to have a scheme where the group of trustees collaborate to create
+the shares in a way that nobody can derive the secret unless a
+sufficient amount of trustees collaborate. In 1991, T. P. Pedersen proposed a scheme
 \cite{PED91} where this trusted dealer is no longer required. In order to
 jointly generate a secret, the trustees perform the following steps:
 \begin{enumerate}
@@ -1082,7 +1082,7 @@ of steps as the electorate and the number of options grow.
 	  set nokey
 	  splot [0:10][0:10] f(x, y)
     \end{gnuplot}
-	\caption{Multi Encryption Ballot - Complexity}
+	\caption{Multi encryption ballot - complexity}
 	\label{fig:multiencryptionencodingcomplexity}
 \end{figure}
 
@@ -1188,7 +1188,7 @@ ElGamal encryption.
 			(bitvector-1-8.center);
 		\end{scope}
 	\end{tikzpicture}
-	\caption{Single Encryption Encoding - Ballot Vector}
+	\caption{Single encryption encoding - ballot vector}
 	\label{fig:singleencryptionencoding}
 \end{figure}
 
@@ -1230,7 +1230,7 @@ containing each option's result after tallying the vote.
 		
 		
 	\end{tikzpicture}
-	\caption{Single Encryption Encoding - Result Vector}
+	\caption{Single encryption encoding - result vector}
 	\label{fig:singleencryptionencodingresult}
 \end{figure}
 
@@ -1266,7 +1266,7 @@ needs almost $100\,000$ modular exponentiations.
 	  set nokey
 	  splot [0:10][0:10] f(x, y)
     \end{gnuplot}
-	\caption{Single Encryption Ballot - Complexity}
+	\caption{Single encryption ballot - complexity}
 	\label{fig:singleencryptionencodingcomplexity}
 \end{figure}
 
@@ -1299,7 +1299,7 @@ clearly the more efficient choice.
 	\end{tabularx}
 	\end{minipage}
 	\renewcommand{\arraystretch}{1}
-	\caption{Comparison of Ballot Encodings}
+	\caption{Comparison of ballot encodings}
 	\label{tab:comparisonofballotencodings}
 \end{table}
 
@@ -1416,7 +1416,7 @@ biggest time period.
 	\end{ganttchart}
 	\end{tikzpicture}
 }
-\caption{Master's Thesis Project Planning}
+\caption{Project planning}
 \label{fig:projectplanning}
 \end{sidewaysfigure}
 
@@ -1479,7 +1479,7 @@ repositories which have been used for the implementation for this project.
 	\end{tabularx}
 	\end{minipage}
 	\renewcommand{\arraystretch}{1}
-	\caption{Source Code Repositories}
+	\caption{Source code repositories}
 	\label{tab:sourcecoderepositories}
 \end{table} 
 
@@ -1841,7 +1841,7 @@ conversation.
 For the unicast functionality of the messaging layer, a hybrid encryption
 mechanism is used. To achieve this, we encrypt an AES key which is used
 previously to encrypt the unicast payload using the RSA public key of the
-recipient. The recipient can then use his secret key to decrypt the AES key,
+recipient. The recipient can then use his private key to decrypt the AES key,
 and then in a second step use this AES key to decrypt the payload.
 
 \section{Messaging}
@@ -1905,7 +1905,7 @@ message types are outlined in \Vref{tab:networkmessagetypes}.
 		provided by the Android platform.}
 		
 	\end{tikzpicture}
-	\caption{Messaging Architecture}
+	\caption{Messaging architecture}
 	\label{fig:messagingarchitecture}
 \end{figure}
 
@@ -1956,7 +1956,7 @@ This paradigm was used heavily for the implementation of this project.
 	\end{tabularx}
 	\end{minipage}
 	\renewcommand{\arraystretch}{1}
-	\caption{Network Message Types}
+	\caption{Network message types}
 	\label{tab:networkmessagetypes}
 \end{table}
 
@@ -1989,7 +1989,7 @@ structure which has been chosen for this project.
 	\umlassoc[geometry=--,arg1=1,align1=left, pos1=0,arg2=0..*,
 	align2=left]{poll}{option}
 	\end{tikzpicture}
-	\caption{Entity Relationship Diagram}
+	\caption{Entity relationship diagram}
 	\label{fig:erd}
 \end{figure}
 
@@ -2039,7 +2039,7 @@ therefore the information about the participants is not stored in the database.
 	\umlassoc[geometry=-|,arg1=1,arg2=0..*,pos1=0.1, pos2=1.9]{Poll}{Option}
 	\umlassoc[geometry=-|,arg1=1,arg2=0..*,pos1=0.1, pos2=1.9]{Poll}{Participant}
 	\end{tikzpicture}
-	\caption{Entity Class Diagram}
+	\caption{Entity class diagram}
 	\label{fig:entities}
 \end{figure}
 
@@ -2130,21 +2130,23 @@ process. Since all the relevant cryptographic values are recorded and saved, we
 can export these values so that a third party verification software could verify
 the voting process. This export functionality exports all the values of a vote
 into a XML File. The XML structure depends on the vote encoding that has been
-chosen. \Vref{fig:xmlstructuresingle} depicts the structure which is used for a
-single encryption ballot vote, \Vref{fig:xmlstructuremulti} the structure used
-for a multi encryption ballot vote.
+chosen. \Vref{fig:xmlstructuremulti} depicts the structure which is used for a
+multi encryption ballot vote, \Vref{fig:xmlstructuresingle} the structure used
+for a single encryption ballot vote.
 
- \begin{figure}[htbp]	
+
+\begin{figure}[htbp]	
+	\includegraphics[width=\textwidth]{xmlstructuremulti.pdf}
+	\caption{XML structure of a multi encryption ballot vote}
+	\label{fig:xmlstructuremulti}
+\end{figure}
+
+\begin{figure}[htbp]	
 	\includegraphics[width=\textwidth]{xmlstructuresingle.pdf}
-	\caption{XML Structure of a Single Encryption Ballot Vote}
+	\caption{XML structure of a single encryption ballot vote}
 	\label{fig:xmlstructuresingle}
 \end{figure}
 
- \begin{figure}[htbp]	
-	\includegraphics[width=\textwidth]{xmlstructuremulti.pdf}
-	\caption{XML Structure of a Multi Encryption Ballot Vote}
-	\label{fig:xmlstructuremulti}
-\end{figure}
 
 
 \section{Testing}
@@ -2176,7 +2178,7 @@ functionality.
 	\end{tabularx}
 	\end{minipage}
 	\renewcommand{\arraystretch}{1}
-	\caption{Testing Infrastructure}
+	\caption{Testing infrastructure}
 	\label{tab:testinginfrastructure}
 \end{table}
 
@@ -2243,7 +2245,7 @@ parameters with the length of 2048 bits have been used.
 	\end{tabularx}
 	\end{minipage}
 	\renewcommand{\arraystretch}{1}
-	\caption{Performance Test Results}
+	\caption{Performance test results}
 	\label{tab:perftestresults}
 \end{table}
 
@@ -2345,8 +2347,8 @@ verifiability. This chapter reflects on certain aspects of this work.
 
 \section{Decentralized E-Voting}
 \label{sec:discussiondecentralizedevoting}
-This section reflects the term \emph{decentralized} in relation to this project
-and what approaches have been chosen to achieve this property.
+This section examines the term \emph{decentralized} in relation to this project
+and what approaches have been chosen to achieve decentralized e-voting.
 
 \paragraph{Communication Layer:} During this project we implemented an e-voting
 system which does not require any other infrastructure than the devices of the
@@ -2371,9 +2373,9 @@ Because broadcast communication does not offer a reliable message exchange, this
 approach turned out to be not reliable enough in certain network situations. The
 messaging layer has been replaced by the AllJoyn library \myref{sec:alljoyn}.
 In contrast to InstaCircle, the initiator of a group takes the role as a master
-who orchestrates the communication within the group. In some sense, this too
-violates the principle of decentralization. The choice of this architecture can
-be justified for two reasons though: 
+who orchestrates the communication within the group. In some sense, this
+violates the principle of decentralization too. The choice of this architecture
+can be justified for two reasons though: 
 \begin{itemize}
   \item The master only orchestrates the message exchange. Attempts to cheat on
   the e-voting protocol layer would be recognized by the protocol.
@@ -2424,7 +2426,7 @@ communication before voting. That means that the integrity of the messages which
 are exchanged can only be verified during the session. Of course, the public
 keys of all participants used during a particular voting session could also be
 exported, but could be replaced along with all the signatures which are
-recalculated using the secret key corresponding to the new public key. This
+recalculated using the private key corresponding to the new public key. This
 missing link could be added by using identities verified by a trusted authority,
 for example with digital certificates. Dealing with certificates usually has a
 significant negative impact on the usability. Furthermore, only a minority of
@@ -2471,7 +2473,7 @@ should give an overview of these compromises.
 
 \paragraph{Public Key Exchange:} In order to guarantee the authenticity of
 messages which have been exchanged during a voting session, each participant
-needs a secret key for signing all the outgoing messages. All the other
+needs a private key for signing all the outgoing messages. All the other
 participants need to be in possession of the corresponding public key, which
 they use to verify incoming messages of that particular sender. Obviously these
 public keys have to be exchanged at the beginning of the session. Of course,
@@ -2677,7 +2679,7 @@ This leads you to the main screen of the application
 
 \begin{figure}[!htb] \centering
 \includegraphics[height=.4\textheight]{img/screenshots/main}
-	\caption{MobiVote Main Screen}
+	\caption{MobiVote main screen}
 	\label{fig:handbook_mainscreen}
 \end{figure}
 
@@ -2703,13 +2705,13 @@ button \keys{Start vote}.
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/votes}
-		\caption{Available Votes}
+		\caption{Available votes}
 		\label{fig:handbook_votes}
 	\end{minipage}
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/vote_details}
-		\caption{Vote Setup}
+		\caption{Vote setup}
 		\label{fig:handbook_votesetup}
 	\end{minipage}
 \end{figure}
@@ -2736,13 +2738,13 @@ network.
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/network_configuration}
-		\caption{Network Configuration}
+		\caption{Network configuration}
 		\label{fig:handbook_networkconfiguration}
 	\end{minipage}
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/advanced_network_configuration}
-		\caption{Advanced Configuration}
+		\caption{Advanced configuration}
 		\label{fig:handbook_advancednetworkconfiguration}
 	\end{minipage}
 \end{figure}
@@ -2781,13 +2783,13 @@ session.
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/network_information}
-		\caption{Network Information}
+		\caption{Network information}
 		\label{fig:handbook_networkinformation}
 		\end{minipage}
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.2\textheight]{img/nfc_tag}
-		\caption{NFC Tag}
+		\caption{NFC tag}
 		\label{fig:handbook_nfctag}
 	\end{minipage}
 \end{figure}
@@ -2837,13 +2839,13 @@ Next, one of the following methods to join can be chosen:
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/join_electorate}
-		\caption{Join Electorate}
+		\caption{Join electorate}
 		\label{fig:handbook_joinelectorate}
 	\end{minipage}
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/join_electorate_password}
-		\caption{Enter Password}
+		\caption{Enter password}
 		\label{fig:handbook_joinelectoratepassword}
 	\end{minipage}
 \end{figure}
@@ -2851,13 +2853,13 @@ Next, one of the following methods to join can be chosen:
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/advanced_network_configuration}
-		\caption{Advanced Configuration}
+		\caption{Advanced configuration}
 		\label{fig:handbook_advancedconfigurationuser}
 	\end{minipage}
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/scan_nfc_tag}
-		\caption{Scan NFC Tag}
+		\caption{Scan NFC tag}
 		\label{fig:handbook_scannfctag}
 	\end{minipage}
 \end{figure}
@@ -2881,13 +2883,13 @@ the slider at the bottom of the screen.
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/electorate_selection}
-		\caption{Admin Defines Electorate}
+		\caption{Administrator defines electorate}
 		\label{fig:handbook_electorateselection}
 	\end{minipage}
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/electorate_display}
-		\caption{Display Electorate}
+		\caption{Display electorate}
 		\label{fig:handbook_electoratedisplay}
 	\end{minipage}
 \end{figure}
@@ -2906,7 +2908,7 @@ on the button \keys{Start voting period}.
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[height=.4\textheight]{img/screenshots/vote_review}
-	\caption{Vote Review}
+	\caption{Vote review}
 	\label{fig:handbook_votereview}
 \end{figure}
 
@@ -2927,13 +2929,13 @@ participant have cast their votes.
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/vote}
-		\caption{Vote Screen}
+		\caption{Vote screen}
 		\label{fig:handbook_votescreen}
 	\end{minipage}
 	\begin{minipage}{.5\textwidth}
   		\centering
 		\includegraphics[height=.4\textheight]{img/screenshots/waitforballots}
-		\caption{Waiting for Ballots}
+		\caption{Waiting for ballots}
 		\label{fig:handbook_waitforballots}
 	\end{minipage}
 \end{figure}
@@ -2949,7 +2951,7 @@ required to reach a decision.
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[height=.4\textheight]{img/screenshots/result}
-	\caption{Result of the Vote}
+	\caption{Result of the vote}
 	\label{fig:handbook_result}
 \end{figure}
 
@@ -2967,7 +2969,7 @@ verify that the vote has been done correctly.
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[height=.4\textheight]{img/screenshots/vote_archive}
-	\caption{Vote Archive}
+	\caption{Vote archive}
 	\label{fig:handbook_votearchive}
 \end{figure}
 
